160/Project 5/parser.output
Terminals unused in grammar

   T_OPENBRACKET
   T_CLOSEBRACKET


Grammar

    0 $accept: SS $end

    1 SS: ClassI Class

    2 ClassI: ClassI Class
    3       | /* empty */

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE
    5      | T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE

    6 M: M MD
    7  | /* empty */

    8 MM: MMD MM
    9   | /* empty */

   10 MD: Type T_IDENTIFIER

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE

   12 Type: T_IDENTIFIER
   13     | T_INT
   14     | T_BOOL

   15 ReturnType: Type
   16           | T_NONE

   17 As: As T_COMMA Argument
   18   | Argument
   19   | /* empty */

   20 Argument: Type T_IDENTIFIER

   21 Body: BDS Statements RS

   22 BDS: BDS BD
   23    | /* empty */

   24 BD: Type Is

   25 Is: T_IDENTIFIER
   26   | Is T_COMMA T_IDENTIFIER

   27 RS: T_RETURN Expression
   28   | /* empty */

   29 Statements: Statement Statements
   30           | /* empty */

   31 Statement: Assignment
   32          | MethodCall
   33          | IfElse
   34          | ForLoop
   35          | Print

   36 Assignment: T_IDENTIFIER T_EQUAL Expression

   37 IfElse: T_IF Expression T_OPENBRACE Statement Statements T_CLOSEBRACE
   38       | T_IF Expression T_OPENBRACE Statement Statements T_CLOSEBRACE T_ELSE T_OPENBRACE Statement Statements T_CLOSEBRACE

   39 ForLoop: T_FOR Assignment T_SEMICOLON Expression T_SEMICOLON Assignment T_OPENBRACE Statement Statements T_CLOSEBRACE

   40 Print: T_PRINT Expression

   41 Expression: Expression T_PLUS Expression
   42           | Expression T_MINUS Expression
   43           | Expression T_MULTIPLY Expression
   44           | Expression T_DIVIDE Expression
   45           | Expression T_LE Expression
   46           | Expression T_LEQ Expression
   47           | Expression T_EQUALS Expression
   48           | Expression T_AND Expression
   49           | Expression T_OR Expression
   50           | T_NOT Expression
   51           | T_MINUS Expression
   52           | T_IDENTIFIER
   53           | T_IDENTIFIER T_DOT T_IDENTIFIER
   54           | MethodCall
   55           | T_OPENPAREN Expression T_CLOSEPAREN
   56           | T_NUMBER
   57           | T_TRUE
   58           | T_FALSE
   59           | T_NEW T_IDENTIFIER
   60           | T_NEW T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

   61 MethodCall: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN
   62           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

   63 Parameters: Parameterss
   64           | /* empty */

   65 Parameterss: Parameterss T_COMMA Expression
   66            | Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 56
T_OR (259) 49
T_AND (260) 48
T_EQUALS (261) 47
T_LEQ (262) 46
T_LE (263) 45
T_MINUS (264) 42 51
T_PLUS (265) 41
T_DIVIDE (266) 44
T_MULTIPLY (267) 43
T_NOT (268) 50
T_FOR (269) 39
T_EQUAL (270) 36
T_IDENTIFIER (271) 4 5 10 11 12 20 25 26 36 52 53 59 60 61 62
T_TRUE (272) 57
T_FALSE (273) 58
T_NEW (274) 59 60
T_PRINT (275) 40
T_IF (276) 37 38
T_ELSE (277) 38
T_INT (278) 13
T_BOOL (279) 14
T_NONE (280) 16
T_COLON (281) 4 11
T_RETURN (282) 27
T_OPENBRACE (283) 4 5 11 37 38 39
T_CLOSEBRACE (284) 4 5 11 37 38 39
T_OPENBRACKET (285)
T_CLOSEBRACKET (286)
T_OPENPAREN (287) 11 55 60 61 62
T_CLOSEPAREN (288) 11 55 60 61 62
T_SEMICOLON (289) 39
T_COMMA (290) 17 26 65
T_DOT (291) 53 62


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
SS (38)
    on left: 1, on right: 0
ClassI (39)
    on left: 2 3, on right: 1 2
Class (40)
    on left: 4 5, on right: 1 2
M (41)
    on left: 6 7, on right: 4 5 6
MM (42)
    on left: 8 9, on right: 4 5 8
MD (43)
    on left: 10, on right: 6
MMD (44)
    on left: 11, on right: 8
Type (45)
    on left: 12 13 14, on right: 10 15 20 24
ReturnType (46)
    on left: 15 16, on right: 11
As (47)
    on left: 17 18 19, on right: 11 17
Argument (48)
    on left: 20, on right: 17 18
Body (49)
    on left: 21, on right: 11
BDS (50)
    on left: 22 23, on right: 21 22
BD (51)
    on left: 24, on right: 22
Is (52)
    on left: 25 26, on right: 24 26
RS (53)
    on left: 27 28, on right: 21
Statements (54)
    on left: 29 30, on right: 21 29 37 38 39
Statement (55)
    on left: 31 32 33 34 35, on right: 29 37 38 39
Assignment (56)
    on left: 36, on right: 31 39
IfElse (57)
    on left: 37 38, on right: 33
ForLoop (58)
    on left: 39, on right: 34
Print (59)
    on left: 40, on right: 35
Expression (60)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60, on right: 27 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 55 65 66
MethodCall (61)
    on left: 61 62, on right: 32 54
Parameters (62)
    on left: 63 64, on right: 60 61 62
Parameterss (63)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . SS $end

    $default  reduce using rule 3 (ClassI)

    SS      go to state 1
    ClassI  go to state 2


State 1

    0 $accept: SS . $end

    $end  shift, and go to state 3


State 2

    1 SS: ClassI . Class
    2 ClassI: ClassI . Class

    T_IDENTIFIER  shift, and go to state 4

    Class  go to state 5


State 3

    0 $accept: SS $end .

    $default  accept


State 4

    4 Class: T_IDENTIFIER . T_COLON T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE
    5      | T_IDENTIFIER . T_OPENBRACE M MM T_CLOSEBRACE

    T_COLON      shift, and go to state 6
    T_OPENBRACE  shift, and go to state 7


State 5

    1 SS: ClassI Class .
    2 ClassI: ClassI Class .

    T_IDENTIFIER  reduce using rule 2 (ClassI)
    $default      reduce using rule 1 (SS)


State 6

    4 Class: T_IDENTIFIER T_COLON . T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE

    T_IDENTIFIER  shift, and go to state 8


State 7

    5 Class: T_IDENTIFIER T_OPENBRACE . M MM T_CLOSEBRACE

    $default  reduce using rule 7 (M)

    M  go to state 9


State 8

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER . T_OPENBRACE M MM T_CLOSEBRACE

    T_OPENBRACE  shift, and go to state 10


State 9

    5 Class: T_IDENTIFIER T_OPENBRACE M . MM T_CLOSEBRACE
    6 M: M . MD

    T_IDENTIFIER  shift, and go to state 11
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13

    $default  reduce using rule 9 (MM)

    MM    go to state 14
    MD    go to state 15
    MMD   go to state 16
    Type  go to state 17


State 10

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER T_OPENBRACE . M MM T_CLOSEBRACE

    $default  reduce using rule 7 (M)

    M  go to state 18


State 11

   11 MMD: T_IDENTIFIER . T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE
   12 Type: T_IDENTIFIER .

    T_OPENPAREN  shift, and go to state 19

    $default  reduce using rule 12 (Type)


State 12

   13 Type: T_INT .

    $default  reduce using rule 13 (Type)


State 13

   14 Type: T_BOOL .

    $default  reduce using rule 14 (Type)


State 14

    5 Class: T_IDENTIFIER T_OPENBRACE M MM . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 20


State 15

    6 M: M MD .

    $default  reduce using rule 6 (M)


State 16

    8 MM: MMD . MM

    T_IDENTIFIER  shift, and go to state 21

    $default  reduce using rule 9 (MM)

    MM   go to state 22
    MMD  go to state 16


State 17

   10 MD: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 23


State 18

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER T_OPENBRACE M . MM T_CLOSEBRACE
    6 M: M . MD

    T_IDENTIFIER  shift, and go to state 11
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13

    $default  reduce using rule 9 (MM)

    MM    go to state 24
    MD    go to state 15
    MMD   go to state 16
    Type  go to state 17


State 19

   11 MMD: T_IDENTIFIER T_OPENPAREN . As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE

    T_IDENTIFIER  shift, and go to state 25
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13

    $default  reduce using rule 19 (As)

    Type      go to state 26
    As        go to state 27
    Argument  go to state 28


State 20

    5 Class: T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE .

    $default  reduce using rule 5 (Class)


State 21

   11 MMD: T_IDENTIFIER . T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE

    T_OPENPAREN  shift, and go to state 19


State 22

    8 MM: MMD MM .

    $default  reduce using rule 8 (MM)


State 23

   10 MD: Type T_IDENTIFIER .

    $default  reduce using rule 10 (MD)


State 24

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER T_OPENBRACE M MM . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 29


State 25

   12 Type: T_IDENTIFIER .

    $default  reduce using rule 12 (Type)


State 26

   20 Argument: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 30


State 27

   11 MMD: T_IDENTIFIER T_OPENPAREN As . T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE
   17 As: As . T_COMMA Argument

    T_CLOSEPAREN  shift, and go to state 31
    T_COMMA       shift, and go to state 32


State 28

   18 As: Argument .

    $default  reduce using rule 18 (As)


State 29

    4 Class: T_IDENTIFIER T_COLON T_IDENTIFIER T_OPENBRACE M MM T_CLOSEBRACE .

    $default  reduce using rule 4 (Class)


State 30

   20 Argument: Type T_IDENTIFIER .

    $default  reduce using rule 20 (Argument)


State 31

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN . T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE

    T_COLON  shift, and go to state 33


State 32

   17 As: As T_COMMA . Argument

    T_IDENTIFIER  shift, and go to state 25
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13

    Type      go to state 26
    Argument  go to state 34


State 33

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON . ReturnType T_OPENBRACE Body T_CLOSEBRACE

    T_IDENTIFIER  shift, and go to state 25
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_NONE        shift, and go to state 35

    Type        go to state 36
    ReturnType  go to state 37


State 34

   17 As: As T_COMMA Argument .

    $default  reduce using rule 17 (As)


State 35

   16 ReturnType: T_NONE .

    $default  reduce using rule 16 (ReturnType)


State 36

   15 ReturnType: Type .

    $default  reduce using rule 15 (ReturnType)


State 37

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType . T_OPENBRACE Body T_CLOSEBRACE

    T_OPENBRACE  shift, and go to state 38


State 38

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE . Body T_CLOSEBRACE

    $default  reduce using rule 23 (BDS)

    Body  go to state 39
    BDS   go to state 40


State 39

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 41


State 40

   21 Body: BDS . Statements RS
   22 BDS: BDS . BD

    T_FOR         shift, and go to state 42
    T_IDENTIFIER  shift, and go to state 43
    T_PRINT       shift, and go to state 44
    T_IF          shift, and go to state 45
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13

    $default  reduce using rule 30 (Statements)

    Type        go to state 46
    BD          go to state 47
    Statements  go to state 48
    Statement   go to state 49
    Assignment  go to state 50
    IfElse      go to state 51
    ForLoop     go to state 52
    Print       go to state 53
    MethodCall  go to state 54


State 41

   11 MMD: T_IDENTIFIER T_OPENPAREN As T_CLOSEPAREN T_COLON ReturnType T_OPENBRACE Body T_CLOSEBRACE .

    $default  reduce using rule 11 (MMD)


State 42

   39 ForLoop: T_FOR . Assignment T_SEMICOLON Expression T_SEMICOLON Assignment T_OPENBRACE Statement Statements T_CLOSEBRACE

    T_IDENTIFIER  shift, and go to state 55

    Assignment  go to state 56


State 43

   12 Type: T_IDENTIFIER .
   36 Assignment: T_IDENTIFIER . T_EQUAL Expression
   61 MethodCall: T_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN
   62           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

    T_EQUAL      shift, and go to state 57
    T_OPENPAREN  shift, and go to state 58
    T_DOT        shift, and go to state 59

    $default  reduce using rule 12 (Type)


State 44

   40 Print: T_PRINT . Expression

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 68
    MethodCall  go to state 69


State 45

   37 IfElse: T_IF . Expression T_OPENBRACE Statement Statements T_CLOSEBRACE
   38       | T_IF . Expression T_OPENBRACE Statement Statements T_CLOSEBRACE T_ELSE T_OPENBRACE Statement Statements T_CLOSEBRACE

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 70
    MethodCall  go to state 69


State 46

   24 BD: Type . Is

    T_IDENTIFIER  shift, and go to state 71

    Is  go to state 72


State 47

   22 BDS: BDS BD .

    $default  reduce using rule 22 (BDS)


State 48

   21 Body: BDS Statements . RS

    T_RETURN  shift, and go to state 73

    $default  reduce using rule 28 (RS)

    RS  go to state 74


State 49

   29 Statements: Statement . Statements

    T_FOR         shift, and go to state 42
    T_IDENTIFIER  shift, and go to state 75
    T_PRINT       shift, and go to state 44
    T_IF          shift, and go to state 45

    $default  reduce using rule 30 (Statements)

    Statements  go to state 76
    Statement   go to state 49
    Assignment  go to state 50
    IfElse      go to state 51
    ForLoop     go to state 52
    Print       go to state 53
    MethodCall  go to state 54


State 50

   31 Statement: Assignment .

    $default  reduce using rule 31 (Statement)


State 51

   33 Statement: IfElse .

    $default  reduce using rule 33 (Statement)


State 52

   34 Statement: ForLoop .

    $default  reduce using rule 34 (Statement)


State 53

   35 Statement: Print .

    $default  reduce using rule 35 (Statement)


State 54

   32 Statement: MethodCall .

    $default  reduce using rule 32 (Statement)


State 55

   36 Assignment: T_IDENTIFIER . T_EQUAL Expression

    T_EQUAL  shift, and go to state 57


State 56

   39 ForLoop: T_FOR Assignment . T_SEMICOLON Expression T_SEMICOLON Assignment T_OPENBRACE Statement Statements T_CLOSEBRACE

    T_SEMICOLON  shift, and go to state 77


State 57

   36 Assignment: T_IDENTIFIER T_EQUAL . Expression

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 78
    MethodCall  go to state 69


State 58

   61 MethodCall: T_IDENTIFIER T_OPENPAREN . Parameters T_CLOSEPAREN

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    $default  reduce using rule 64 (Parameters)

    Expression   go to state 79
    MethodCall   go to state 69
    Parameters   go to state 80
    Parameterss  go to state 81


State 59

   62 MethodCall: T_IDENTIFIER T_DOT . T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

    T_IDENTIFIER  shift, and go to state 82


State 60

   56 Expression: T_NUMBER .

    $default  reduce using rule 56 (Expression)


State 61

   51 Expression: T_MINUS . Expression

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 83
    MethodCall  go to state 69


State 62

   50 Expression: T_NOT . Expression

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 84
    MethodCall  go to state 69


State 63

   52 Expression: T_IDENTIFIER .
   53           | T_IDENTIFIER . T_DOT T_IDENTIFIER
   61 MethodCall: T_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN
   62           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 58
    T_DOT        shift, and go to state 85

    $default  reduce using rule 52 (Expression)


State 64

   57 Expression: T_TRUE .

    $default  reduce using rule 57 (Expression)


State 65

   58 Expression: T_FALSE .

    $default  reduce using rule 58 (Expression)


State 66

   59 Expression: T_NEW . T_IDENTIFIER
   60           | T_NEW . T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

    T_IDENTIFIER  shift, and go to state 86


State 67

   55 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 87
    MethodCall  go to state 69


State 68

   40 Print: T_PRINT Expression .
   41 Expression: Expression . T_PLUS Expression
   42           | Expression . T_MINUS Expression
   43           | Expression . T_MULTIPLY Expression
   44           | Expression . T_DIVIDE Expression
   45           | Expression . T_LE Expression
   46           | Expression . T_LEQ Expression
   47           | Expression . T_EQUALS Expression
   48           | Expression . T_AND Expression
   49           | Expression . T_OR Expression

    T_OR        shift, and go to state 88
    T_AND       shift, and go to state 89
    T_EQUALS    shift, and go to state 90
    T_LEQ       shift, and go to state 91
    T_LE        shift, and go to state 92
    T_MINUS     shift, and go to state 93
    T_PLUS      shift, and go to state 94
    T_DIVIDE    shift, and go to state 95
    T_MULTIPLY  shift, and go to state 96

    $default  reduce using rule 40 (Print)


State 69

   54 Expression: MethodCall .

    $default  reduce using rule 54 (Expression)


State 70

   37 IfElse: T_IF Expression . T_OPENBRACE Statement Statements T_CLOSEBRACE
   38       | T_IF Expression . T_OPENBRACE Statement Statements T_CLOSEBRACE T_ELSE T_OPENBRACE Statement Statements T_CLOSEBRACE
   41 Expression: Expression . T_PLUS Expression
   42           | Expression . T_MINUS Expression
   43           | Expression . T_MULTIPLY Expression
   44           | Expression . T_DIVIDE Expression
   45           | Expression . T_LE Expression
   46           | Expression . T_LEQ Expression
   47           | Expression . T_EQUALS Expression
   48           | Expression . T_AND Expression
   49           | Expression . T_OR Expression

    T_OR         shift, and go to state 88
    T_AND        shift, and go to state 89
    T_EQUALS     shift, and go to state 90
    T_LEQ        shift, and go to state 91
    T_LE         shift, and go to state 92
    T_MINUS      shift, and go to state 93
    T_PLUS       shift, and go to state 94
    T_DIVIDE     shift, and go to state 95
    T_MULTIPLY   shift, and go to state 96
    T_OPENBRACE  shift, and go to state 97


State 71

   25 Is: T_IDENTIFIER .

    $default  reduce using rule 25 (Is)


State 72

   24 BD: Type Is .
   26 Is: Is . T_COMMA T_IDENTIFIER

    T_COMMA  shift, and go to state 98

    $default  reduce using rule 24 (BD)


State 73

   27 RS: T_RETURN . Expression

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 99
    MethodCall  go to state 69


State 74

   21 Body: BDS Statements RS .

    $default  reduce using rule 21 (Body)


State 75

   36 Assignment: T_IDENTIFIER . T_EQUAL Expression
   61 MethodCall: T_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN
   62           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN

    T_EQUAL      shift, and go to state 57
    T_OPENPAREN  shift, and go to state 58
    T_DOT        shift, and go to state 59


State 76

   29 Statements: Statement Statements .

    $default  reduce using rule 29 (Statements)


State 77

   39 ForLoop: T_FOR Assignment T_SEMICOLON . Expression T_SEMICOLON Assignment T_OPENBRACE Statement Statements T_CLOSEBRACE

    T_NUMBER      shift, and go to state 60
    T_MINUS       shift, and go to state 61
    T_NOT         shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63
    T_TRUE        shift, and go to state 64
    T_FALSE       shift, and go to state 65
    T_NEW         shift, and go to state 66
    T_OPENPAREN   shift, and go to state 67

    Expression  go to state 100
    MethodCall  go to state 69


State 78

   36 Assignment: T_IDENTIFIER T_EQUAL Expression .
   41 Expression: Expression . T_PLUS Expression
   42           | Expression . T_MINUS Expression
   43           | Expression . T_MULTIPLY Expression
   44           | Expression . T_DIVIDE Expression
   45           | Expression . T_LE Expression
   46           | Expression . T_LEQ Expression
   47           | Expression . T_EQUALS Expression
   48           | Expression . T_AND Expression
   49           | Expression . T_OR Expression
